<resources>
    <string name="app_name">UpAndDownTheRiver</string>
    <string name="game_title">Up and Down the River</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="players">Players</string>
    <string name="settings">Settings</string>
    <string name="add_player">Add Player</string>
    <string name="save_player_text">Save</string>
    <string name="player_name_text_field">Name</string>
    <string name="nick_name_text_field">Nick Name</string>
    <string name="player_menu_edit">Edit</string>
    <string name="player_menu_delete">Delete</string>
    <string name="finish_button_text">Finish</string>
    <string name="select_dealer_text">Select First Dealer:</string>
    <string name="select_hand_size_text">Select Starting Hand Size:</string>
    <string name="select_trump_mode_text">Select Trump Mode:</string>
    <string name="number_repeats_text">Number of Times to Repeat:</string>
    <string name="up_down_text">Up or Down First:</string>
    <string name="up_text">Up</string>
    <string name="down_text">Down</string>
    <string name="max_hand_size">Max Hand Size</string>
    <string name="enter_bids_text">Enter Bids</string>
</resources>
